# virtughan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  API.py  Dockerfile  Justfile  README.md  index.html  mkdocs.yml  objects.inv  paper.bib  paper.md  playground.ipynb  pyproject.toml  sitemap.xml
.github/workflows/: docker-build-publish.yml  mkdocs.yml  publish.yml  tests.yml
cog/: index.html
comparison/: index.html
docs/: comparison.md  index.html  install.md
docs/examples/: usage.ipynb
examples/usage/: index.html
install/: index.html
search/: search_index.json
src/engine/: index.html
src/extract/: index.html
src/tile/: index.html
src/utis/: index.html
src/virtughan/: __init__.py  band_math.py  collections.py  engine.py  extract.py  geo.py  stac.py  tile.py  utils.py
static/js/: export_download.js  filters.js  map.js
templates/: index.html
tests/: test_api.py  test_vcube.py
